# szteam-network-frontend/src/app/services/models/review-response.ts
@@ -3,7 +3,9 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface ReviewResponse {
+  author?: string;
   comment?: string;
+  createdAt?: string;
   ownReview?: boolean;
   score?: number;
 }
