# szteam-network/src/main/java/com/kristof/szteam/review/ReviewResponse.java
@@ -2,6 +2,8 @@ package com.kristof.szteam.review;
 
 import lombok.*;
 
+import java.time.LocalDateTime;
+
 @Getter
 @Setter
 @Builder
@@ -12,4 +14,6 @@ public class ReviewResponse {
     private Double score;
     private String comment;
     private boolean ownReview;
+    private String author;
+    private LocalDateTime createdAt;
 }
